Fixed spacing

--- a/draft/css/style.css
+++ b/draft/css/style.css
@@ -443,7 +443,11 @@ body {margin:0; overflow-x: hidden;}
     margin-left: 5%;
     margin-right: 5%;
     padding-bottom: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
+  }
+
+  #event-last {
+    padding-bottom: 40px;
   }
 
   #event img {
